--- a/example3D/Example3D.vcxproj.filters
+++ b/example3D/Example3D.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FrameBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application3D.h">
@@ -74,6 +77,9 @@
     <ClInclude Include="Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FrameBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\shaders\AnimatedVertexShader.txt">
@@ -83,6 +89,12 @@
       <Filter>Shaders</Filter>
     </Text>
     <Text Include="..\shaders\BasicVertexShader.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="..\shaders\PostProcessFragment.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="..\shaders\PostProcessVertex.txt">
       <Filter>Shaders</Filter>
     </Text>
   </ItemGroup>
